--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^3.22.0",
     "@react-router/node": "^7.6.2",
     "@react-router/serve": "^7.6.2",
+    "gifuct-js": "^2.1.2",
     "isbot": "^5.1.28",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
