--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^3.22.0",
+    "@prisma/client": "^6.15.0",
     "@react-router/node": "^7.6.2",
     "@react-router/serve": "^7.6.2",
+    "dotenv": "^17.2.1",
     "gifuct-js": "^2.1.2",
+    "html2canvas": "^1.4.1",
     "isbot": "^5.1.28",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
@@ -27,6 +30,7 @@
     "@types/node": "^24",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
+    "prisma": "^6.15.0",
     "react-router-devtools": "^5.0.6",
     "typescript": "^5.8.3",
     "vite": "^7.0.0",
